# docker-advanced-multi-stage-builds

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
release/: Dockerfile  test.yml
scripts/: development.sh  release.sh  test.sh
tests/: conftest.py  test_main.py
